// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> when size is lg match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  position: relative;
  width: 44px;
  height: 44px;
  border-radius: 22px;
}

<div>
  <img
    alt=""
    class="emotion-0"
    data-testid="image"
    draggable="false"
    loading="eager"
    src="https://cdn.class101.net/images/2483a7e5-8c20-4ac7-a209-805b4482664d"
  />
</div>
`;

exports[`<Avatar /> when size is md match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  position: relative;
  width: 30px;
  height: 30px;
  border-radius: 15px;
}

<div>
  <img
    alt=""
    class="emotion-0"
    data-testid="image"
    draggable="false"
    loading="eager"
    src="https://cdn.class101.net/images/2483a7e5-8c20-4ac7-a209-805b4482664d"
  />
</div>
`;

exports[`<Avatar /> when size is sm match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  position: relative;
  width: 24px;
  height: 24px;
  border-radius: 12px;
}

<div>
  <img
    alt=""
    class="emotion-0"
    data-testid="image"
    draggable="false"
    loading="eager"
    src="https://cdn.class101.net/images/2483a7e5-8c20-4ac7-a209-805b4482664d"
  />
</div>
`;

exports[`<Avatar /> when size is xs match snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  position: relative;
  width: 16px;
  height: 16px;
  border-radius: 8px;
}

<div>
  <img
    alt=""
    class="emotion-0"
    data-testid="image"
    draggable="false"
    loading="eager"
    src="https://cdn.class101.net/images/2483a7e5-8c20-4ac7-a209-805b4482664d"
  />
</div>
`;
